Fixed gap on the bottom of the footer while on mobile view

--- a/src/assets/home/scss/home.scss
+++ b/src/assets/home/scss/home.scss
@@ -236,7 +236,7 @@
                 height: 60% !important;
 
                 &.custom-gray-bg {
-                    height: 40%;
+                    height: 40% !important;
                     padding: 4rem 3rem;
 
                     span {
